Fix site header on smaller-width displays

--- a/themes/material/static/css/style.css
+++ b/themes/material/static/css/style.css
@@ -8732,3 +8732,12 @@ tr {
 .entry-image.left, .entry-image.right {
   max-width: 40%;
 }
+
+img.site-banner {
+  width: 100%;
+  height: 150px;
+}
+
+div.sitelogo {
+  white-space: nowrap;
+}
